--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,29 @@ spring.datasource.hikari.username=user01
 # password
 spring.datasource.hikari.password=user01
 # url
-spring.datasource.url=jdbc:mariadb://52.79.250.182:3306/user01
+#spring.datasource.url=jdbc:mariadb://52.79.250.182:3306/user01
 # driver
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+# log4jdbc 사용
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:mariadb://52.79.250.182:3306/user01
+
+## SQL LOG 설정
+# log4jdbc.log4j2.properties 생성
+log4jdbc.spylogdelegator.name=net.sf.log4jdbc.log.slf4j.Slf4jSpyLogDelegator
+log4jdbc.dump.sql.maxlinelength=0
+# 3 에서 설정할 정보를 application.properties에서 설정
+logging.level.jdbc=OFF
+logging.level.jdbc.sqltiming=DEBUG    
+logging.level.jdbc.audit=OFF             
+logging.level.jdbc.resultset=OFF         
+logging.level.jdbc.resultsettable=INFO   
+logging.level.jdbc.connection=OFF      
+logging.level.com.zaxxer.hikari=OFF
+logging.level.javax.sql.DataSource=INFO
+
+
 #Security 비 활성화
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
@@ -20,6 +40,16 @@ mybatis.mapper-locations=classpath:database/mapper/*Mapper.xml
 mybatis.config-location=classpath:database/config/config.xml
 
 
-## prefix & suffix
+## JSP prefix & suffix
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+
+## 전역 레벨 설정
+logging.level.root=info
+
+
+## Web 요청이 발생시 파라미터 출력 (console)
+## 종류나, 값이 클 경우 생략될 수도 있다.
+logging.level.org.springframework.web=trace
+spring.mvc.log-request-details=true
