--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,6 +45,21 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 
+## File 관리
+# Multipart 사용여부
+spring.servlet.multipart.enabled=true
+# 파일 하나당 최대 크기 설정
+spring.servlet.multipart.max-file-size=10MB
+# 총 파일 최대 크기 설정
+spring.servlet.multipart.max-request-size=50MB
+
+## File 업로드 경로 
+#Base 경로
+app.upload=D:///pcy/upload/
+# notice & qna 경로
+app.board.notice=notice
+app.board.qna=qna
+
 ## 전역 레벨 설정
 logging.level.root=info
 
