--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,6 +59,10 @@ app.upload=D:///pcy/upload/
 # notice & qna 경로
 app.board.notice=notice
 app.board.qna=qna
+# 파일 요청 url (a태그 경로)
+app.url.path=/files/**
+# 파일 맵핑 Base 경로 (FileMappingConfig.java)
+app.upload.mapping=file:///D:///pcy/upload/
 
 ## 전역 레벨 설정
 logging.level.root=info
