--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -72,3 +72,7 @@ logging.level.root=info
 ## 종류나, 값이 클 경우 생략될 수도 있다.
 logging.level.org.springframework.web=trace
 spring.mvc.log-request-details=true
+
+
+## Transaction 사용시 implements를 하지 않는 경우 에러 발생 -> 이를 방지
+spring.aop.proxy-target-class=true
