--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,78 +1,4 @@
-server.port=82
+## 우선순위 1 : application.properties
 
-## DB연결 정보
-# username
-spring.datasource.hikari.username=user01
-# password
-spring.datasource.hikari.password=user01
-# url
-#spring.datasource.url=jdbc:mariadb://52.79.250.182:3306/user01
-# driver
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-
-# log4jdbc 사용
-spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:mariadb://52.79.250.182:3306/user01
-
-## SQL LOG 설정
-# log4jdbc.log4j2.properties 생성
-log4jdbc.spylogdelegator.name=net.sf.log4jdbc.log.slf4j.Slf4jSpyLogDelegator
-log4jdbc.dump.sql.maxlinelength=0
-# 3 에서 설정할 정보를 application.properties에서 설정
-logging.level.jdbc=OFF
-logging.level.jdbc.sqltiming=DEBUG    
-logging.level.jdbc.audit=OFF             
-logging.level.jdbc.resultset=OFF         
-logging.level.jdbc.resultsettable=INFO   
-logging.level.jdbc.connection=OFF      
-logging.level.com.zaxxer.hikari=OFF
-logging.level.javax.sql.DataSource=INFO
-
-
-#Security 비 활성화
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
-
-
-## Mapper 위치
-mybatis.mapper-locations=classpath:database/mapper/*Mapper.xml
-
-## Config 위치
-mybatis.config-location=classpath:database/config/config.xml
-
-
-## JSP prefix & suffix
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
-
-
-## File 관리
-# Multipart 사용여부
-spring.servlet.multipart.enabled=true
-# 파일 하나당 최대 크기 설정
-spring.servlet.multipart.max-file-size=10MB
-# 총 파일 최대 크기 설정
-spring.servlet.multipart.max-request-size=50MB
-
-## File 업로드 경로 
-#Base 경로
-app.upload=D:///pcy/upload/
-# notice & qna 경로
-app.board.notice=notice
-app.board.qna=qna
-# 파일 요청 url (a태그 경로)
-app.url.path=/files/**
-# 파일 맵핑 Base 경로 (FileMappingConfig.java)
-app.upload.mapping=file:///D:///pcy/upload/
-
-## 전역 레벨 설정
-logging.level.root=info
-
-
-## Web 요청이 발생시 파라미터 출력 (console)
-## 종류나, 값이 클 경우 생략될 수도 있다.
-logging.level.org.springframework.web=trace
-spring.mvc.log-request-details=true
-
-
-## Transaction 사용시 implements를 하지 않는 경우 에러 발생 -> 이를 방지
-spring.aop.proxy-target-class=true
+# 프로파일이 dev를 포함
+spring.profiles.include=dev
