--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+### DB 정보 : gitFork에 올리지 않음 (Custom) ###
+application-dev.properties
+application-prod.properties
+
+
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
