--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
 	</properties>
 	<dependencies>
 		
+		<!-- SpringBoot > Spring Form과 검증 | Spring From 검증 API  -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-aop</artifactId>
