--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
 	</properties>
 	<dependencies>
 		
+		
+		<!-- oauth2 소셜 로그인 API -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
+		
 		<!-- SpringBoot > Spring Form과 검증 | Spring From 검증 API  -->
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
