로그아웃 2가지 방식

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,10 +6,7 @@ server.port=82
 spring.datasource.hikari.username=user01
 # password
 spring.datasource.hikari.password=user01
-# url
-#spring.datasource.url=jdbc:mariadb://13.209.19.188:3306/user01
-# driver
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.url=jdbc:log4jdbc:mariadb://52.79.250.182:3306/user01
 
@@ -45,7 +42,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
 
 ###Upload 경로
-app.upload=D:///gdj68js/upload/
+app.upload=D:///pcy/upload/
 
 ##upload위치구분하기위해서 
 app.board.notice=notice
@@ -55,7 +52,7 @@ app.board.qn=qna
 ##파일 요청 url
 app.url.path=/files/**
 ##파일 맵핑 Base 경로 꺼내갈때 file:///붙여야함 
-app.upload.mapping=file:///D:///gdj68js/upload/
+app.upload.mapping=file:///D:///pcy/upload/
 
 ##transaction처리
 spring.aop.proxy-target-class=true
@@ -86,9 +83,9 @@ spring.messages.cache-duration=600
 ##SocialLogin
 ##################Kakao
 # Rest Api key
-spring.security.oauth2.client.registration.kakao.client-id=99a52f47602f8ad4434ae05a22fd8ff0
+spring.security.oauth2.client.registration.kakao.client-id=52e5ee57181abdcbff698a5732e60f4d
 # Admin Key
-spring.security.oauth2.client.registration.kakao.client-secret=e2326d7595480bbe48a6f62398558b08
+spring.security.oauth2.client.registration.kakao.client-secret=7e5cdcf168e4edf5f0b23a21bba922fd
 # Redirect URL
 spring.security.oauth2.client.registration.kakao.redirect-uri = http://localhost:82/login/oauth2/code/kakao
 # 고정값
