--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -39,7 +39,7 @@ app.board.qn=qna
 ##파일 요청 url
 app.url.path=/files/**
 ##파일 맵핑 Base 경로 꺼내갈때 file:///붙여야함 
-app.upload.mapping=file:///D:///gdj68js/upload/
+app.upload.mapping=file:///D:///pcy/upload/
 
 ##transaction처리
 spring.aop.proxy-target-class=true
